[gd_scene load_steps=5 format=3 uid="uid://d2fxiea2gkfof"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://ccf4qtg7dlf5" path="res://assets/map.jpeg" id="2_map"]
[ext_resource type="FontFile" uid="uid://brrogx7oqdjar" path="res://assets/alfabet98.ttf" id="3_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0, 0, 0, 0)
border_width_bottom = 2
border_color = Color(0.831373, 0.686275, 0.215686, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="MapContainer" type="Control" parent="BackgroundLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="BackgroundLayer/MapContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_map")
expand_mode = 1
stretch_mode = 6

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="VignetteOverlay" type="ColorRect" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.3)

[node name="TitleContainer" type="MarginContainer" parent="UILayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 80.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="Title" type="Label" parent="UILayer/TitleContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.992157, 0.815686, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 96
text = "Kurtulu≈ü"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="UILayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 120.0
offset_top = -60.0
offset_right = 420.0
offset_bottom = 60.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="UILayer/MenuContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.992157, 0.815686, 1)
theme_override_colors/font_pressed_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_colors/font_hover_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/focus = SubResource("StyleBoxFlat_button")
text = "New Game"
flat = true
alignment = 0

[node name="SettingsButton" type="Button" parent="UILayer/MenuContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.992157, 0.815686, 1)
theme_override_colors/font_pressed_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_colors/font_hover_color = Color(0.831373, 0.686275, 0.215686, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button")
theme_override_styles/focus = SubResource("StyleBoxFlat_button")
text = "Settings"
flat = true
alignment = 0

[node name="VersionLabel" type="Label" parent="UILayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -40.0
offset_right = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.992157, 0.815686, 0.5)
theme_override_font_sizes/font_size = 16
text = "v0.1.0"
horizontal_alignment = 2

[node name="TransitionLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="FadeRect" type="ColorRect" parent="TransitionLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)
